--- a/Mp3App/Features/Setting/SettingViewController.storyboard
+++ b/Mp3App/Features/Setting/SettingViewController.storyboard
@@ -34,7 +34,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UWz-lO-v8Q">
                                         <rect key="frame" x="20" y="10" width="40" height="40"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="L" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rjh-VW-TAz">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rjh-VW-TAz">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
@@ -64,7 +64,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="iPN-Iy-IXr">
-                                <rect key="frame" x="20" y="155.5" width="374" height="251"/>
+                                <rect key="frame" x="20" y="155.5" width="374" height="311"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="icX-Kh-ZyI">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
@@ -237,6 +237,40 @@
                                             <constraint firstItem="4YJ-mk-ZcL" firstAttribute="centerY" secondItem="qxu-h5-cHB" secondAttribute="centerY" id="ysN-js-cSc"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WAn-fu-ilT">
+                                        <rect key="frame" x="0.0" y="251" width="374" height="60"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qye-tN-6RM">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
+                                            </button>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icMmLogin_Normal" translatesAutoresizingMaskIntoConstraints="NO" id="kfC-oL-9lQ">
+                                                <rect key="frame" x="0.0" y="15" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="bjq-mY-Bjw"/>
+                                                    <constraint firstAttribute="height" constant="30" id="cHx-Nm-FQ7"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đăng nhập" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2Z-pU-i8o">
+                                                <rect key="frame" x="40" y="22" width="314" height="16"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="kfC-oL-9lQ" firstAttribute="centerY" secondItem="WAn-fu-ilT" secondAttribute="centerY" id="1aW-4l-UkR"/>
+                                            <constraint firstItem="K2Z-pU-i8o" firstAttribute="leading" secondItem="kfC-oL-9lQ" secondAttribute="trailing" constant="10" id="79v-eM-Och"/>
+                                            <constraint firstItem="qye-tN-6RM" firstAttribute="top" secondItem="WAn-fu-ilT" secondAttribute="top" id="9Ee-MU-Vee"/>
+                                            <constraint firstAttribute="height" constant="60" id="CZF-ay-7DE"/>
+                                            <constraint firstAttribute="trailing" secondItem="K2Z-pU-i8o" secondAttribute="trailing" constant="20" id="LAy-nL-P8S"/>
+                                            <constraint firstItem="qye-tN-6RM" firstAttribute="leading" secondItem="WAn-fu-ilT" secondAttribute="leading" id="NgB-b6-qEN"/>
+                                            <constraint firstAttribute="bottom" secondItem="qye-tN-6RM" secondAttribute="bottom" id="PoZ-hI-G8l"/>
+                                            <constraint firstItem="K2Z-pU-i8o" firstAttribute="centerY" secondItem="WAn-fu-ilT" secondAttribute="centerY" id="cyQ-vc-E5D"/>
+                                            <constraint firstItem="kfC-oL-9lQ" firstAttribute="leading" secondItem="WAn-fu-ilT" secondAttribute="leading" id="lkk-vM-mVS"/>
+                                            <constraint firstAttribute="trailing" secondItem="qye-tN-6RM" secondAttribute="trailing" id="vqd-Qa-PVu"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="icX-Kh-ZyI" firstAttribute="top" secondItem="iPN-Iy-IXr" secondAttribute="top" id="4Yr-zR-hxQ"/>
@@ -264,7 +298,10 @@
                         <outlet property="avatarView" destination="UWz-lO-v8Q" id="vou-8g-zNT"/>
                         <outlet property="emailLabel" destination="tca-JH-CvP" id="8bB-3h-hKy"/>
                         <outlet property="helpButton" destination="mDg-ZI-kCt" id="1YB-Cf-qBb"/>
+                        <outlet property="loginButton" destination="qye-tN-6RM" id="nyK-8j-hBO"/>
+                        <outlet property="loginContainer" destination="WAn-fu-ilT" id="Tae-hk-Gn2"/>
                         <outlet property="logoutButton" destination="j4k-NB-wPS" id="yUj-qN-hHT"/>
+                        <outlet property="logoutContainer" destination="qxu-h5-cHB" id="qaD-lR-AOt"/>
                         <outlet property="privacyPolicyButton" destination="26U-k0-Bx0" id="jW7-RE-eqk"/>
                         <outlet property="serviceTermsButton" destination="5WG-mI-U8C" id="wxV-gj-eqY"/>
                     </connections>
@@ -275,6 +312,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icMmLogin_Normal" width="24" height="24"/>
         <image name="ic_setting_music_Normal" width="34" height="34"/>
         <image name="ic_setting_report_Normal" width="34" height="34"/>
         <image name="ic_setting_snooze_Normal" width="34" height="34"/>
