--- a/Mp3App/Features/Play/Audio/AudioPlayerView.xib
+++ b/Mp3App/Features/Play/Audio/AudioPlayerView.xib
@@ -19,7 +19,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="player_icon_cdcover_small_Normal" translatesAutoresizingMaskIntoConstraints="NO" id="EJg-Hc-HH7">
-                    <rect key="frame" x="40" y="20" width="334" height="334"/>
+                    <rect key="frame" x="40" y="201" width="334" height="334"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="EJg-Hc-HH7" secondAttribute="height" id="sbl-DC-WfJ"/>
                     </constraints>
@@ -27,8 +27,8 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="EJg-Hc-HH7" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="MMd-9F-Arg"/>
                 <constraint firstItem="EJg-Hc-HH7" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="Qaq-KE-1Gj"/>
-                <constraint firstItem="EJg-Hc-HH7" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="WYn-7c-K36"/>
                 <constraint firstItem="EJg-Hc-HH7" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="40" id="jQd-4z-PI5"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
