--- a/Mp3App/Features/Mypage/PlaylistDetail/PlaylistDetailTableViewCell.xib
+++ b/Mp3App/Features/Mypage/PlaylistDetail/PlaylistDetailTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -72,6 +73,7 @@
             <connections>
                 <outlet property="albumImageView" destination="lAy-n9-517" id="X8n-xb-1So"/>
                 <outlet property="descriptionLabel" destination="5ST-cu-QsY" id="3TA-sg-IMW"/>
+                <outlet property="optionButton" destination="8Lt-RQ-hsM" id="19E-WO-cld"/>
                 <outlet property="titleLabel" destination="IYW-nk-QVs" id="HYu-hx-028"/>
             </connections>
             <point key="canvasLocation" x="175.36231884057972" y="171.42857142857142"/>
